<resources>
    <string name="app_name">Project Tugas Besar Kelompok B Restaurant</string>
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="hello">Hello</string>
    <string name="logo_restoku">Logo_Restoku</string>
    <string name="slogan">Quality Over Quantity</string>
    <string name="menu_restoku">Menu Restoku</string>
    <string name="order">Order</string>
    <string name="greetings">Hello, since its your first time open Restoku, we want to setting our app to match your comfort</string>

    //Cart
    <string name="total_cost">Total Cost</string>
    <string name="cost_number">0</string>
    <string name="checkout">CheckOut</string>

    //Register and Login
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="terms_and_condition">Condition</string>
    <string name="would_you_like_to_get_any_notification_about_food_from_us_optional">Would you like to get any notification about food from us (Optional)</string>
    <string name="yes_please_send_me_a_notification">Yes , please send me a notification</string>
    <string name="yes_you_can_access_my_location">Yes , you can access my location</string>
    <string name="would_you_let_us_to_access_your_location_so_we_can_offer_a_better_service_required">Would you let us to access your location so we can offer a better service (Required)</string>
    <string name="would_you_let_us_to_access_your_camera_so_we_can_offer_a_smooth_service_required">Would you let us to access your camera so we can offer a smooth service (Required)</string>
    <string name="yes_you_can_access_my_camera">Yes , you can access my camera</string>
    <string name="register_account">Register Account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">I DO NOT HAVE ACCOUNT YET</string>
    <string name="i_already_have_account">I already have account</string>
    <string name="full_name">Full Name</string>
    <string name="handphone_number">Handphone Number</string>
    <string name="continue_hint">Continue</string>
    <string name="match_password">Match Password</string>
    <string name="check_all">Check All</string>
    <string name="logo_register_account">Logo Register Account</string>
    <string name="login">LOGIN</string>
    <string name="login_account">Login Account</string>
    <string name="gambar_logo_login">Gambar Logo Login</string>
    <string name="register_hint">Register</string>
    <string name="phone_number">Phone number</string>
    <string name="nama">Nama</string>
    <string name="my_profile">My Profile</string>

    //Edit Profile
    <string name="edit_profile">Edit Profile</string>
    <string name="input_your_name">Input your name</string>
    <string name="input_your_username">Input your username</string>
    <string name="input_your_phone_number">Input your phone number</string>
    <string name="logout">Logout</string>
    <string name="edit_profile_picture">Edit Profile Picture</string>
    <string name="cancel">Cancel</string>
    <string name="update_profile">Update Profile</string>

    //Address
    <string name="my_address">My Address</string>
    <string name="nama_alamat">Nama Alamat</string>
    <string name="number">1</string>
    <string name="add_new_address">ADD NEW ADDRESS</string>

    //Confirmation for Logout
    <string name="confirmation">Are you sure you want to logout?</string>

    //Mapbox
    <string name="mapbox_access_token">pk.eyJ1Ijoid2VuZHl3aW5hdGExMjgiLCJhIjoiY2tmcXc0c2pmMDdncDJ3bnBvOWZnYjh3ZCJ9.307pDJYClbUBVuy3I_Iy0Q</string>

    //GeoLocation
    <string name="set_my_location">SET MY LOCATION</string>
    <string name="set_location">Set Location</string>
    <string name="add_address">Add Address</string>
    <string name="address_name">Address Name</string>
    <string name="address_detail">Address Detail</string>
    <string name="add">Add</string>
    <string name="delete_address">DELETE</string>
    <string name="update_address">UPDATE</string>
    <string name="edit_address">Edit Address</string>
    <string name="email">Email</string>
    <string name="input_your_email">Input your Email</string>

    //PdfTransaksi
    <string name="data_transaksi">Data Transaksi</string>
    <string name="cetak">CETAK PDF</string>


</resources>