...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingStart="22dp"
            android:paddingEnd="22dp"
...
                android:text="@string/would_you_like_to_get_any_notification_about_food_from_us_optional"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/cbNotification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/yes_please_send_me_a_notification"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/would_you_let_us_to_access_your_location_so_we_can_offer_a_better_service_required" />

            <CheckBox
                android:id="@+id/cbLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/yes_you_can_access_my_location" />

            <TextView
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/would_you_let_us_to_access_your_camera_so_we_can_offer_a_smooth_service_required" />

            <CheckBox
                android:id="@+id/cbCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/yes_you_can_access_my_camera" />

            <LinearLayout
...
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="42dp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnContinue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/continue_hint" />
            </LinearLayout>


...
