<?xml version="1.0" encoding="utf-8"?>
<layout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginBottom="8dp">

<data>
    <variable
        name="keranjang"
        type="com.kelompokbpbp.projecttugasbesarkelompokbrestaurant.model.Keranjang"/>
</data>

<com.google.android.material.card.MaterialCardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="8dp"
    android:layout_margin="15dp"
    android:id="@+id/cartAdapter"
    tools:context=".CartAdapter">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:id="@+id/img_cart"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="16dp"
            android:src="@color/cardview_dark_background"
            android:scaleType="fitXY"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_produk_name"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="Nasi Uduk Spesial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_produk_harga"
                    android:textSize="16sp"
                    android:text="Rp 50.000"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/menuMinus"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        app:icon="@drawable/ic_baseline_remove_24"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:textSize="16sp"
                        android:elevation="1dp"
                        app:cornerRadius="0dp"/>

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        app:cardElevation="1dp">
                        <TextView
                            android:id="@+id/menuCount"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="1"
                            android:gravity="center"
                            android:textSize="16sp"/>
                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/menuAdd"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        app:icon="@drawable/ic_baseline_add_24"
                        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
                        android:textSize="16sp"
                        android:elevation="1dp"
                        app:cornerRadius="0dp"/>

                    <ImageButton
                        android:id="@+id/deleteProductButton"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_gravity="end"
                        android:layout_marginStart="90dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:padding="8dp"
                        app:srcCompat="@drawable/ic_baseline_delete_24" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
</layout>